--- a/modules/runtime-core/pom.xml
+++ b/modules/runtime-core/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>dirigible-core-messaging</artifactId>
             <version>3.0.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-utils</artifactId>
+            <version>3.0.3-SNAPSHOT</version>
+        </dependency>
     	
 		<dependency>
 		    <groupId>javax.websocket</groupId>
