--- a/modules/database-persistence/pom.xml
+++ b/modules/database-persistence/pom.xml
@@ -45,6 +45,24 @@
 		    <version>10.12.1.1</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.0.0</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <version>1.4.193</version>
+		    <scope>test</scope>
+		</dependency>
     </dependencies>
 
 </project>
