--- a/modules/database-persistence/pom.xml
+++ b/modules/database-persistence/pom.xml
@@ -63,6 +63,12 @@
 		    <version>1.4.193</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sap.db.hdb</groupId>
+			<artifactId>com.sap.db.ngdbc</artifactId>
+			<version>1.50.00.511933</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 </project>
