--- a/modules/database-persistence/src/test/resources/database.properties
+++ b/modules/database-persistence/src/test/resources/database.properties
@@ -10,3 +10,7 @@ h2.driver=org.h2.Driver
 h2.url=jdbc:h2:mem:dirigible;DB_CLOSE_DELAY=-1
 h2.username=sa
 h2.password=
+hana.driver=com.sap.db.jdbc.Driver
+hana.url=jdbc:sap://<host>:<port>
+hana.username=
+hana.password=
