--- a/modules/database-persistence/pom.xml
+++ b/modules/database-persistence/pom.xml
@@ -63,12 +63,12 @@
 		    <version>1.4.193</version>
 		    <scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.sap.db.hdb</groupId>
 			<artifactId>com.sap.db.ngdbc</artifactId>
 			<version>1.50.00.511933</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
     </dependencies>
 
 </project>
