--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -343,6 +343,11 @@
 		 	<artifactId>dirigible-database-managed</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-database-custom</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<!-- Core Services -->
 		<dependency>
@@ -695,6 +700,12 @@
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlets</artifactId>
 			<version>${jetty.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.0.0</version>
 		</dependency>
 
 		<!-- <dependency>
