--- a/releng/server-all/pom.xml
+++ b/releng/server-all/pom.xml
@@ -179,6 +179,11 @@
 		 	<artifactId>dirigible-database-managed</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-database-custom</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<!-- Core Services -->
 		<dependency>
