--- a/modules/repository-database/pom.xml
+++ b/modules/repository-database/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>dirigible-database-sql</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-search</artifactId>
+            <version>3.1.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
 		    <groupId>org.apache.derby</groupId>
