--- a/modules/repository-search/pom.xml
+++ b/modules/repository-search/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<name>Repository - Local</name>
-	<artifactId>dirigible-repository-local</artifactId>
+	<name>Repository - Search</name>
+	<artifactId>dirigible-repository-search</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -30,37 +30,25 @@
     
     <dependencies>
     	<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-commons-api</artifactId>
-			<version>3.1.0-SNAPSHOT</version>
-    	</dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-commons-api</artifactId>
+            <version>3.1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-repository-api</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-repository-search</artifactId>
-            <version>3.1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-repository-zip</artifactId>
-            <version>3.1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-security</artifactId>
-			<version>3.1.0-SNAPSHOT</version>
-    	</dependency>
-    	
-    	<dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-repository-api-test</artifactId>
-            <version>3.1.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
+		    <groupId>org.apache.lucene</groupId>
+		    <artifactId>lucene-core</artifactId>
+		    <version>${lucene.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.lucene</groupId>
+		    <artifactId>lucene-queryparser</artifactId>
+		    <version>${lucene.version}</version>
+		</dependency>
     </dependencies>
 
 </project>
