--- a/releng/server-all/pom.xml
+++ b/releng/server-all/pom.xml
@@ -334,6 +334,18 @@
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
 		
+		<!-- CMS -->
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-cms-api</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-cms-internal</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
+		
 		<!-- API - Javascript -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
