managed cmis support for SAP CP Neo

--- a/pom.xml
+++ b/pom.xml
@@ -446,6 +446,7 @@
 		
 		<module>modules/cms-api</module>
 		<module>modules/cms-internal</module>
+		<module>modules/cms-managed</module>
 
 		<module>ide</module>
 		<module>templates</module>
