--- a/pom.xml
+++ b/pom.xml
@@ -458,6 +458,7 @@
 		<module>releng/server-all</module>
 		<module>releng/server-runtime</module>
 		<module>releng/desktop-all</module>
+		<module>releng/sap-all</module>
 	</modules>
 
 </project>
