--- a/modules/cms-internal/src/main/resources/dirigible-cms.properties
+++ b/modules/cms-internal/src/main/resources/dirigible-cms.properties
@@ -8,4 +8,6 @@
 # SAP - initial API and implementation
 #
 
-
+DIRIGIBLE_CMS_PROVIDER=internal
+DIRIGIBLE_CMS_INTERNAL_ROOT_FOLDER=target
+DIRIGIBLE_CMS_INTERNAL_ROOT_FOLDER_IS_ABSOLUTE=false
