--- a/modules/cms-managed/src/main/resources/dirigible-cms.properties
+++ b/modules/cms-managed/src/main/resources/dirigible-cms.properties
@@ -8,6 +8,7 @@
 # SAP - initial API and implementation
 #
 
+DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_CMS_MANAGED_CONFIGURATION_JNDI_NAME=java:comp/env/EcmService
 DIRIGIBLE_CMS_MANAGED_CONFIGURATION_AUTH_METHOD=key
 DIRIGIBLE_CMS_MANAGED_CONFIGURATION_NAME=cmis:dirigible
