--- a/api/api-facades/api-tests/pom.xml
+++ b/api/api-facades/api-tests/pom.xml
@@ -95,6 +95,16 @@
             <artifactId>dirigible-api-indexing</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-cms</artifactId>
+            <version>3.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-cms-internal</artifactId>
+            <version>3.1.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
@@ -131,9 +141,14 @@
             <artifactId>dirigible-api-javascript-indexing</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-javascript-log</artifactId>
+            <version>3.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-cms</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
         
