--- a/pom.xml
+++ b/pom.xml
@@ -379,6 +379,7 @@
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jetty.version>9.4.5.v20170502</jetty.version>
 		<lucene.version>7.0.1</lucene.version>
+		<chemistry.version>1.1.0</chemistry.version>
 		
 		<skip.tests>true</skip.tests>
 	</properties>
