--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -282,7 +282,12 @@
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-log</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-cms</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<!-- Repository -->
 		<dependency>
@@ -564,6 +569,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-javascript-test</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-javascript-cms</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
 		
