--- a/releng/sap-all/pom.xml
+++ b/releng/sap-all/pom.xml
@@ -476,6 +476,11 @@
 		 	<artifactId>dirigible-template-database-view</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-template-html</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Resources Plugins -->
 		<dependency>
