--- a/api/api-facades/api-tests/pom.xml
+++ b/api/api-facades/api-tests/pom.xml
@@ -151,7 +151,21 @@
             <artifactId>dirigible-api-javascript-cms</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
-        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.all.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
