--- a/pom.xml
+++ b/pom.xml
@@ -208,16 +208,16 @@
 	</repositories>
 
 	<pluginRepositories>
-	    <pluginRepository>
-	      <id>alfresco</id>
-		  <url>https://artifacts.alfresco.com/nexus/content/repositories/public/</url>
-	      <snapshots>
-	        <enabled>true</enabled>
-	      </snapshots>
-	      <releases>
-	        <enabled>true</enabled>
-	      </releases>
-	    </pluginRepository>
+		<pluginRepository>
+			<id>alfresco</id>
+			<url>https://artifacts.alfresco.com/nexus/content/repositories/public/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</pluginRepository>
 	</pluginRepositories>
 
 	<distributionManagement>
@@ -311,15 +311,15 @@
 		</dependency>
 
 		<dependency>
-		  <groupId>javax.annotation</groupId>
-		  <artifactId>jsr250-api</artifactId>
-		  <version>${jsr250-api.version}</version>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>${jsr250-api.version}</version>
 		</dependency>
 
 		<dependency>
-		    <groupId>org.apache.cxf</groupId>
-		    <artifactId>cxf-rt-rs-service-description-swagger</artifactId>
-		    <version>${cxf.version}</version>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
+			<version>${cxf.version}</version>
 		</dependency>
 
 		<!-- Test Dependencies -->
@@ -339,16 +339,19 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>${mockito.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>${hamcrest.all.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<!-- End Test Dependencies -->
 	</dependencies>
