--- a/modules/database-data-models/pom.xml
+++ b/modules/database-data-models/pom.xml
@@ -55,6 +55,12 @@
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-security</artifactId>
+			<version>3.1.0-SNAPSHOT</version>
+    	</dependency>
+    	
+        <dependency>
 		    <groupId>commons-codec</groupId>
 		    <artifactId>commons-codec</artifactId>
 		    <version>${commons.codec}</version>
