--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -343,7 +343,7 @@
 		 	<artifactId>dirigible-database-derby</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-database-managed</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
@@ -352,7 +352,7 @@
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-database-custom</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		
 		<!-- Core Services -->
 		<dependency>
@@ -734,11 +734,11 @@
 			<version>${jetty.version}</version>
 		</dependency>
 		
-		<dependency>
+		<!-- <dependency>
 		    <groupId>org.postgresql</groupId>
 		    <artifactId>postgresql</artifactId>
 		    <version>42.0.0</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- <dependency>
 		 	<groupId>org.activiti</groupId>
