--- a/modules/core-scheduler/pom.xml
+++ b/modules/core-scheduler/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>dirigible-repository-api</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-engine-api</artifactId>
+			<version>3.1.0-SNAPSHOT</version>
+    	</dependency>
     	<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-api-security</artifactId>
@@ -61,6 +66,12 @@
     	</dependency>
     	
     	<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
+		
+		<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-commons-test</artifactId>
 			<version>3.1.0-SNAPSHOT</version>
@@ -72,12 +83,6 @@
 			<version>3.1.0-SNAPSHOT</version>
 			<scope>test</scope>
     	</dependency>
-    	
-    	<dependency>
-		    <groupId>org.quartz-scheduler</groupId>
-		    <artifactId>quartz</artifactId>
-		    <version>2.3.0</version>
-		</dependency>
     </dependencies>
 
 </project>
