--- a/releng/server-runtime/pom.xml
+++ b/releng/server-runtime/pom.xml
@@ -300,6 +300,16 @@
 		 	<artifactId>dirigible-engine-wiki</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-engine-listener</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-engine-job</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<!-- CMS -->
 		<dependency>
