--- a/releng/server-runtime/pom.xml
+++ b/releng/server-runtime/pom.xml
@@ -184,11 +184,11 @@
 		 	<artifactId>dirigible-database-managed</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-database-custom</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		
 		<!-- Core Services -->
 		<dependency>
