--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -643,6 +643,11 @@
 		 	<artifactId>dirigible-ide-repository</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-ide-documents</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Templates Plugins -->
 		<dependency>
