--- a/ide/ide-repository/.gitignore
+++ b/ide/ide-repository/.gitignore
@@ -1,6 +1,17 @@
+# folders
+dist/
+.settings/
+target/
+derby/
+dirigible_local/
+/bin/
 /target/
-/target/
-/target/
-/target/
-/target/
-/target/
+
+# files
+.DS_Store
+.project
+.classpath
+*.bak
+*.class
+*.jar
+derby.log
