--- a/releng/sap-all/pom.xml
+++ b/releng/sap-all/pom.xml
@@ -506,6 +506,11 @@
 		 	<artifactId>dirigible-template-job</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-template-listener</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Resources Plugins -->
 		<dependency>
