Fix "Template Extension View" project name

--- a/templates/template-extension-view/pom.xml
+++ b/templates/template-extension-view/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Template - Listener</name>
+	<name>Template - Extension View</name>
 	<artifactId>dirigible-template-extension-view</artifactId>
     <packaging>jar</packaging>
 
