--- a/releng/sap-all/pom.xml
+++ b/releng/sap-all/pom.xml
@@ -511,6 +511,16 @@
 		 	<artifactId>dirigible-template-listener</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-template-extension-view</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-template-extension-perspective</artifactId>
+		 	<version>3.1.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Resources Plugins -->
 		<dependency>
