managed database and cms fixes

--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -230,6 +230,26 @@
 
 	<dependencies>
 	
+		<!-- Platform -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-core</artifactId>
+		    <version>${logback.version}</version>
+		    <scope>compile</scope>
+		</dependency>
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>${logback.version}</version>
+		    <scope>compile</scope>
+		</dependency>
+	
 		<!-- Commons -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
