--- a/api/api-facades/api-log/pom.xml
+++ b/api/api-facades/api-log/pom.xml
@@ -38,12 +38,14 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.25</version>
+			<version>${slf4j.version}</version>
+			<scope>provided</scope>
 		</dependency>        
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<version>${logback.version}</version>
+		    <scope>provided</scope>
 		</dependency>
 
     </dependencies>
