--- a/modules/runtime-ide-databases/pom.xml
+++ b/modules/runtime-ide-databases/pom.xml
@@ -44,7 +44,7 @@
             <artifactId>dirigible-database-sql</artifactId>
             <version>3.1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-derby</artifactId>
             <version>3.1.0-SNAPSHOT</version>
@@ -53,7 +53,7 @@
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-managed</artifactId>
             <version>3.1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency> -->
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
