--- a/modules/cms-internal/pom.xml
+++ b/modules/cms-internal/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>dirigible-repository-local</artifactId>
 			<version>3.1.0-SNAPSHOT</version>
     	</dependency>
+    	<dependency>
+		    <groupId>org.apache.chemistry.opencmis</groupId>
+		    <artifactId>chemistry-opencmis-commons-api</artifactId>
+		    <version>${chemistry.version}</version>
+		    <scope>compile</scope>
+		</dependency>
     </dependencies>
 
 </project>
