--- a/modules/runtime-security/pom.xml
+++ b/modules/runtime-security/pom.xml
@@ -39,6 +39,30 @@
             <artifactId>dirigible-core-security</artifactId>
             <version>3.1.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-utils</artifactId>
+            <version>3.1.1-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-test</artifactId>
+			<version>3.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-derby</artifactId>
+			<version>3.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-local</artifactId>
+			<version>3.1.1-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
     </dependencies>
 
 </project>
