--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -432,11 +432,11 @@
 		 	<artifactId>dirigible-runtime-extensions</artifactId>
 		 	<version>3.1.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-runtime-security</artifactId>
 		 	<version>3.1.1-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-runtime-transport</artifactId>
