cms managed - fix

--- a/modules/cms-managed/src/main/resources/dirigible-cms.properties
+++ b/modules/cms-managed/src/main/resources/dirigible-cms.properties
@@ -10,9 +10,9 @@
 
 DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_CMS_MANAGED_CONFIGURATION_JNDI_NAME=java:comp/env/EcmService
-DIRIGIBLE_CMS_MANAGED_CONFIGURATION_AUTH_METHOD=key
-DIRIGIBLE_CMS_MANAGED_CONFIGURATION_NAME=cmis:dirigible
-DIRIGIBLE_CMS_MANAGED_CONFIGURATION_KEY=cmis:dirigible:key
-DIRIGIBLE_CMS_MANAGED_CONFIGURATION_DESTINATION=
+# DIRIGIBLE_CMS_MANAGED_CONFIGURATION_AUTH_METHOD=key
+# DIRIGIBLE_CMS_MANAGED_CONFIGURATION_NAME=cmis:dirigible
+# DIRIGIBLE_CMS_MANAGED_CONFIGURATION_KEY=cmis:dirigible:key
+# DIRIGIBLE_CMS_MANAGED_CONFIGURATION_DESTINATION=
 
 DIRIGIBLE_CONNECTIVITY_CONFIGURATION_JNDI_NAME=java:comp/env/connectivity/Configuration
