--- a/releng/sap-all/pom.xml
+++ b/releng/sap-all/pom.xml
@@ -66,7 +66,7 @@
 
 	<dependencies>
 	
-		<!-- Platform -->
+		<!-- Platform 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -85,6 +85,7 @@
 		    <version>${logback.version}</version>
 		    <scope>compile</scope>
 		</dependency>
+		-->
 	
 		<!-- Commons -->
 		<dependency>
