Fix #202 [Repository] Support of custom datasources

--- a/modules/repository-database/src/main/resources/dirigible-repository-database.properties
+++ b/modules/repository-database/src/main/resources/dirigible-repository-database.properties
@@ -8,4 +8,5 @@
 # SAP - initial API and implementation
 #
 
-
+DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_TYPE=managed
+DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_NAME=DefaultDB
