--- a/releng/server-all/pom.xml
+++ b/releng/server-all/pom.xml
@@ -199,12 +199,13 @@
 		 	<artifactId>dirigible-database-derby</artifactId>
 		 	<version>3.1.2-SNAPSHOT</version>
 		</dependency>
+		<!-- 
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-database-managed</artifactId>
 		 	<version>3.1.2-SNAPSHOT</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-database-custom</artifactId>
 		 	<version>3.1.0-SNAPSHOT</version>
