--- a/templates/template-extension-view/pom.xml
+++ b/templates/template-extension-view/pom.xml
@@ -4,7 +4,7 @@
 	
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-templates</artifactId>
+		<artifactId>dirigible-template-parent</artifactId>
 		<version>3.1.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
