#201 Refactors project structure - "Resources"

--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -12,7 +12,6 @@
     <name>Releng - Desktop - All</name>
 	<artifactId>dirigible-desktop-all</artifactId>
 	<packaging>war</packaging>
-	
 
 	<build>
 		<pluginManagement>
@@ -484,37 +483,7 @@
 		<!-- Resources Plugins -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources-themes</artifactId>
-		 	<version>3.1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources-angular</artifactId>
-		 	<version>3.1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources-bootstrap</artifactId>
-		 	<version>3.1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources-goldenlayout</artifactId>
-		 	<version>3.1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources-jquery</artifactId>
-		 	<version>3.1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources-jstree</artifactId>
-		 	<version>3.1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources-fonts</artifactId>
+		 	<artifactId>dirigible-resources</artifactId>
 		 	<version>3.1.2-SNAPSHOT</version>
 		</dependency>
 
