--- a/pom.xml
+++ b/pom.xml
@@ -385,9 +385,11 @@
 	</properties>
 
 	<modules>
-		<module>api/api-all</module>
-		<module>api/api-facade</module>
-		<module>api/api-javascript</module>
+		<module>api</module>
+		<module>ide</module>
+		<module>templates</module>
+		<module>resources</module>
+		<module>ext</module>
 
 		<module>modules/commons-api</module>
 		<module>modules/commons-config</module>
@@ -444,17 +446,10 @@
 		<module>modules/cms-internal</module>
 		<module>modules/cms-managed</module>
 
-		<module>ide</module>
-		<module>templates</module>
-
-		<module>resources</module>
-		
-		<module>ext</module>
-
-		<module>releng/server-all</module>
-		<module>releng/server-runtime</module>
 		<module>releng/desktop-all</module>
 		<module>releng/sap-all</module>
+		<module>releng/server-all</module>
+		<module>releng/server-runtime</module>
 	</modules>
 
 </project>
