--- a/resources/pom.xml
+++ b/resources/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Resources - Plugins</name>
-	<artifactId>dirigible-resources</artifactId>
+	<name>Resources - Parent</name>
+	<artifactId>dirigible-resources-parent</artifactId>
 	<description>Resources Plugins</description>
     <packaging>pom</packaging>
 
@@ -35,6 +35,7 @@
 	</properties>
 
 	<modules>
+		<module>resources-all</module>
 		<module>resources-themes</module>
 		<module>resources-angular</module>
 		<module>resources-bootstrap</module>
