--- a/resources/resources-jquery/pom.xml
+++ b/resources/resources-jquery/pom.xml
@@ -4,7 +4,7 @@
 	
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-resources</artifactId>
+		<artifactId>dirigible-resources-parent</artifactId>
 		<version>3.1.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
