--- a/modules/engine-js-nashorn/pom.xml
+++ b/modules/engine-js-nashorn/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-core</artifactId>
+            <artifactId>dirigible-api-facade-core</artifactId>
             <version>3.1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -69,7 +69,7 @@
     	</dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-tests</artifactId>
+            <artifactId>dirigible-api-facade-tests</artifactId>
             <version>3.1.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
