--- a/modules/runtime-security/pom.xml
+++ b/modules/runtime-security/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-utils</artifactId>
+            <artifactId>dirigible-api-facade-utils</artifactId>
             <version>3.1.2-SNAPSHOT</version>
         </dependency>
         
