--- a/modules/engine-web/pom.xml
+++ b/modules/engine-web/pom.xml
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-http</artifactId>
+            <artifactId>dirigible-api-facade-http</artifactId>
             <version>3.1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
