--- a/modules/runtime-anonymous/pom.xml
+++ b/modules/runtime-anonymous/pom.xml
@@ -31,7 +31,7 @@
     <dependencies>
     	<dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-security</artifactId>
+            <artifactId>dirigible-api-facade-security</artifactId>
             <version>3.1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
