#201 Refactors project structure - "Commons"

--- a/modules/commons/commons-api/pom.xml
+++ b/modules/commons/commons-api/pom.xml
@@ -4,15 +4,15 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-parent</artifactId>
+		<artifactId>dirigible-commons-parent</artifactId>
 		<version>3.1.2-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Commons - Configurations</name>
-	<artifactId>dirigible-commons-config</artifactId>
+	<name>Commons - API</name>
+	<artifactId>dirigible-commons-api</artifactId>
     <packaging>jar</packaging>
-    
+
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
