--- a/modules/commons/commons-xml2json/pom.xml
+++ b/modules/commons/commons-xml2json/pom.xml
@@ -4,15 +4,15 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-parent</artifactId>
+		<artifactId>dirigible-commons-parent</artifactId>
 		<version>3.1.2-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Commons - Process</name>
-	<artifactId>dirigible-commons-process</artifactId>
+	<name>Commons - XML to JSON</name>
+	<artifactId>dirigible-commons-xml2json</artifactId>
     <packaging>jar</packaging>
-    
+
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
@@ -27,19 +27,5 @@
             </plugin>
         </plugins>
     </build>
-    
-    <dependencies>
-    	<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-commons-api</artifactId>
-			<version>3.1.2-SNAPSHOT</version>
-    	</dependency>
-    	<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-commons-config</artifactId>
-			<version>3.1.2-SNAPSHOT</version>
-    	</dependency>
-    	
-    </dependencies>
 
 </project>
