--- a/modules/cms/cms-api/pom.xml
+++ b/modules/cms/cms-api/pom.xml
@@ -4,13 +4,13 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-parent</artifactId>
+		<artifactId>dirigible-cms-parent</artifactId>
 		<version>3.1.2-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>CMS - Internal</name>
-	<artifactId>dirigible-cms-internal</artifactId>
+	<name>CMS - API</name>
+	<artifactId>dirigible-cms-api</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -39,27 +39,6 @@
 			<artifactId>dirigible-commons-api</artifactId>
 			<version>3.1.2-SNAPSHOT</version>
     	</dependency>
-    	<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-cms-api</artifactId>
-			<version>3.1.2-SNAPSHOT</version>
-    	</dependency>
-    	<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-repository-api</artifactId>
-			<version>3.1.2-SNAPSHOT</version>
-    	</dependency>
-    	<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-repository-local</artifactId>
-			<version>3.1.2-SNAPSHOT</version>
-    	</dependency>
-    	<dependency>
-		    <groupId>org.apache.chemistry.opencmis</groupId>
-		    <artifactId>chemistry-opencmis-commons-api</artifactId>
-		    <version>${chemistry.version}</version>
-		    <scope>compile</scope>
-		</dependency>
     </dependencies>
 
 </project>
