Fixed #163 - MySQL support for Persistence layer

--- a/modules/database/database-persistence/src/test/resources/database.properties
+++ b/modules/database/database-persistence/src/test/resources/database.properties
@@ -14,3 +14,7 @@ hana.driver=com.sap.db.jdbc.Driver
 hana.url=jdbc:sap://<host>:<port>
 hana.username=
 hana.password=
+mysql.driver=com.mysql.jdbc.Driver
+mysql.url=jdbc:mysql://<host>:<port>/dirigible?characterEncoding=UTF-8
+mysql.username=dirigible
+mysql.password=dirigible
