--- a/modules/database/database-persistence/pom.xml
+++ b/modules/database/database-persistence/pom.xml
@@ -59,6 +59,12 @@
 			<version>1.4.193</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.14</version>
+		    <scope>test</scope>
+		</dependency>
 		
 		<!-- <dependency>
 			<groupId>com.sybase.jdbc4</groupId>
