--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -27,7 +27,7 @@
 		<module>api-indexing</module>
 		<module>api-log</module>
 		<module>api-cms</module>
-		<module>api-bpm</module>
+		<!-- <module>api-bpm</module> -->
 	</modules>
 
 </project>
