--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>dirigible-api-facade-utils</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-bpm</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
