--- a/api/api-javascript/api-all/pom.xml
+++ b/api/api-javascript/api-all/pom.xml
@@ -91,5 +91,10 @@
             <artifactId>dirigible-api-javascript-bpm</artifactId>
             <version>3.2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-workspace</artifactId>
+            <version>3.2.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
