schema synchronization support

--- a/modules/bpm/bpm-flowable/pom.xml
+++ b/modules/bpm/bpm-flowable/pom.xml
@@ -69,6 +69,12 @@
 		    <groupId>org.flowable</groupId>
 		    <artifactId>flowable-engine</artifactId>
 		    <version>${flowable.version}</version>
+		    <exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+		    </exclusions>
 		</dependency>
 		
 		<dependency>
