--- a/modules/database/database-data-models/pom.xml
+++ b/modules/database/database-data-models/pom.xml
@@ -84,6 +84,11 @@
             <version>3.2.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+    	<dependency>
+    		<groupId>org.eclipse.dirigible</groupId>
+    		<artifactId>dirigible-commons-xml2json</artifactId>
+    		<version>3.2.0-SNAPSHOT</version>
+    	</dependency>
     </dependencies>
 
 </project>
